# lib/data_dictionary_web/controllers/data_field_controller.ex
@@ -6,12 +6,34 @@ defmodule DataDictionaryWeb.DataFieldController do
   alias DataDictionary.DataStructures
   alias DataDictionary.DataStructures.DataField
   alias DataDictionaryWeb.ErrorView
+  alias DataDictionaryWeb.SwaggerDefinitions
 
   action_fallback DataDictionaryWeb.FallbackController
+
+  def swagger_definitions do
+    SwaggerDefinitions.data_field_swagger_definitions()
+  end
+
+  swagger_path :index do
+    get "/data_fields"
+    description "List Data Fields"
+    response 200, "OK", Schema.ref(:DataFieldsResponse)
+  end
 
   def index(conn, _params) do
     data_fields = DataStructures.list_data_fields()
     render(conn, "index.json", data_fields: data_fields)
+  end
+
+  swagger_path :create do
+    post "/data_fields"
+    description "Creates Data Fields"
+    produces "application/json"
+    parameters do
+      data_field :body, Schema.ref(:DataFieldCreate), "Data Field create attrs"
+    end
+    response 201, "OK", Schema.ref(:DataFieldResponse)
+    response 400, "Client Error"
   end
 
   def create(conn, %{"data_field" => data_field_params}) do
@@ -30,6 +52,17 @@ defmodule DataDictionaryWeb.DataFieldController do
         |> put_status(:unprocessable_entity)
         |> render(ErrorView, :"422.json")
     end
+  end
+
+  swagger_path :show do
+    get "/data_fields/{id}"
+    description "Show Data Field"
+    produces "application/json"
+    parameters do
+      id :path, :integer, "Data Field ID", required: true
+    end
+    response 200, "OK", Schema.ref(:DataFieldResponse)
+    response 400, "Client Error"
   end
 
   def show(conn, %{"id" => id}) do
